[package]
name = "lwk_simplicity"
version = "0.18.0"
edition = "2021"
description = "Liquid Wallet Kit - Utilities to deal with Simplicity transactions"
license = "MIT OR BSD-2-Clause"
exclude = ["tests/", "data/"]
documentation = "https://docs.rs/lwk_simplicity"

[dependencies]
lwk_common = { version = "0.18.0" }
lwk_signer = { version = "0.18.0", default-features = false }
lwk_wollet = { version = "0.18.0", default-features = false }

simplicityhl = { version = "0.5.0" }

thiserror = { workspace = true }

serde_json.workspace = true
serde = { workspace = true, features = ["derive"] }

uuid = { version = "~1.20", default-features = false, features = [
    "serde",
    "v4",
] }

lending-contracts = {git = "https://github.com/gerau/simplicity-lending.git",  rev = "a7c286f13e7f148ee2a998aed7a899f82d508392", optional = true}
simplex = { package = "smplx-std", git = "https://github.com/gerau/smplx.git", rev = "da5a22da20293637473f67bd73a3645afda3a2a6", optional = true }

rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"], optional = true }
tokio = { version = "1.36.0", features = ["rt", "macros"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "~1.20", default-features = false, features = ["js"] }

[features]
lending = ["lending-contracts", "simplex", "reqwest", "lwk_wollet/electrum", "lwk_wollet/esplora", "tokio"]

[[test]]
name = "lending"
required-features = ["lending"]

[dev-dependencies]
lwk_test_util = { version = "0.18.0" }
lwk_wollet = { version = "0.18.0", default-features = false, features = [
    "esplora",
    "electrum",
] }
