[package]
name = "lwk_test_util"
version = "0.2.0"
edition = "2021"
description = "Liquid Wallet Kit - Test utilities"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_test_util"

[dependencies]
electrsd = { version = "0.27.1", features = ["legacy"] }
elements = "0.24.0"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lwk_common = { version = "0.3.0" }
lwk_signer = { version = "0.3.0" }
lwk_wollet = { version = "0.3.0" }
lwk_jade = { version = "0.3.0" }
lwk_containers = { version = "0.2.0" }
rand = "0.8.5"
tempfile = "3.8.0"
pulldown-cmark = "0.9.3"
