[package]
name = "lwk_test_util"
version = "0.4.1"
edition = "2021"
description = "Liquid Wallet Kit - Test utilities"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_test_util"

[dependencies]
lwk_common = { version = "0.5" }
lwk_containers = { version = "0.3" }

electrsd = { version = "0.27.2", features = ["legacy"] }
#elements-miniscript = "0.3.1"
elements-miniscript = { git = "https://github.com/LeoComandini/elements-miniscript", rev = "383e58782695652f359623f97da1d56f9ee076a6" }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8.5"
tempfile = "3.8.0"
pulldown-cmark = "0.9.3"
bip39 = "2.0.0"
