[package]
name = "lwk_test_util"
version = "0.13.0"
edition = "2021"
description = "Liquid Wallet Kit - Test utilities"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_test_util"

[dependencies]
lwk_common = { version = "0.13.0" }
lwk_containers = { version = "0.13.0" }

electrsd = { version = "0.29.0", features = ["legacy"] }
elements-miniscript.workspace = true
serde_json = "1"
log = "0.4.22"
env_logger = "0.11.5"
rand = "0.8.5"
tempfile = "3.8.0"
pulldown-cmark = "0.9.3"
bip39 = "2.0.0"

reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "json",
    "rustls-tls",
] }
