[package]
name = "lwk_tiny_jrpc"
version = "0.8.0"
edition = "2021"
description = "Liquid Wallet Kit - Tiny JSON RPC Server"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_tiny_jrpc"

[dependencies]
jsonrpc = { version = "0.17.0" }
anyhow = "1.0.75"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
thiserror = "1"
tiny_http = "0.12.0"
log.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "json",
    "rustls-tls",
] }
tempfile = "3.8.0"
