[package]
name = "lwk_tiny_jrpc"
version = "0.18.0"
edition = "2021"
description = "Liquid Wallet Kit - Tiny JSON RPC Server"
license = "MIT OR BSD-2-Clause"
exclude = ["test/"]
documentation = "https://docs.rs/lwk_tiny_jrpc"

[dependencies]
jsonrpc = { version = "0.18.0" }
anyhow = "1.0.75"
serde.workspace = true
serde_derive = "1.0.188"
serde_json.workspace = true
thiserror = { workspace = true }
tiny_http = "0.12.0"
log.workspace = true

[dev-dependencies]
tempfile.workspace = true
