[package]
name = "lwk_wasm"
version = "0.13.1"
edition = "2021"
description = "Liquid Wallet Kit - WASM"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
serial = ["web-sys"]

[dependencies]
lwk_jade = { version = "0.13.0", default-features = false, features = [
    "asyncr",
] }
lwk_signer = { version = "0.13.0", default-features = false, features = [
    "amp0",
] }
lwk_ledger = { version = "0.13.0", default-features = false, features = [
    "asyncr",
] }
lwk_wollet = { version = "0.13.0", default-features = false, features = [
    "esplora",
    "amp2",
    "amp0",
    "prices",
    "registry",
] }
lwk_boltz = { version = "0.13.0", default-features = false }
lwk_common = "0.13.0"

wasm-bindgen = "0.2.84"
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
reqwest = { version = "0.12", default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "json",
    "rustls-tls",
] }
wasm-bindgen-futures = "0.4.41"
wasm-bindgen-test = "0.3.34"
serde-wasm-bindgen = "0.6.3"
thiserror = "1.0.57"


tokio = { version = "1.36.0", features = ["rt", "macros", "io-util", "sync"] }
byteorder = "1.5.0"

# the web-sys dependency declares different features according if it's compiled for wasm/doc or not
# This is because all serial-related features are experimental and they required specific RUSTFLAGS
# we don't want to specify unless it is strictly necessary.
[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.69", optional = true, features = [
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "SerialPort",
    "SerialOptions",
    "Navigator",
    "Serial",
    "ReadableStream",
    "WritableStream",
    "SerialPortRequestOptions",
    "Hid",
    "HidDevice",
    "HidDeviceRequestOptions",
    "HidInputReportEvent",
    "console",
    "Performance",
    "WebSocket",
    "MessageEvent",
    "BinaryType",
    "Window",
    "Event",
] }
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
web-sys = { version = "0.3.69", optional = true, features = [
    "ReadableStreamDefaultReader",
    "WritableStreamDefaultWriter",
    "Navigator",
    "ReadableStream",
    "WritableStream",
    "Hid",
    "HidDevice",
    "HidDeviceRequestOptions",
    "HidInputReportEvent",
    "console",
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = ['-O', '--debuginfo']

[package.metadata.docs.rs]
all-features = true
rustc-args = ["--cfg", "web_sys_unstable_apis"]
rustdoc-args = ["--cfg", "docsrs"]
