[package]
name = "lwk_wollet"
version = "0.8.0"
edition = "2021"
autotests = false
description = "Liquid Wallet Kit - Watch-only wallet based on CT Descriptors"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_wollet"

[lib]
crate-type = ["lib"]

[dependencies]
lwk_common = { version = "0.8.0" }
lwk_signer = { version = "0.8.0", features = [
    "jade",
    "ledger",
], optional = true }

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm-siv = "0.10.0"
electrum-client = { version = "0.21.0", optional = true, default-features = false, features = [
    "use-rustls-ring",
    "proxy",
] }
bip39 = "2.0.0"
elements-miniscript = { version = "0.4", features = ["serde"] }
thiserror = "1.0.48"
once_cell = "1.18.0"
elements = { version = "0.25.0", features = ["base64"] }
base64 = "0.21.4"
bitcoincore-rpc = { version = "0.19.0", optional = true }

# wasm
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "json",
    "rustls-tls",
] }
wasm-bindgen-futures = { version = "0.4.41", optional = true }
web-sys = { version = "0.3.68", features = ["Window"], optional = true }
js-sys = { version = "0.3.68", optional = true }
tokio = { version = "1.36.0", default-features = false, features = [
    "time",
], optional = true }

#registry
idna = "0.4.0"
regex-lite = "0.1.5"

log.workspace = true
fxhash = "0.2.1"

age = { version = "0.11.0", optional = true }
url = "2.5.2"


[dev-dependencies]
lwk_jade = { version = "0.8.0", features = ["test_emulator"] }
lwk_ledger = { version = "0.8.0", features = ["test_emulator"] }
lwk_signer = { version = "0.8.0", features = ["jade", "ledger"] }
lwk_containers = { version = "0.8.0" }
lwk_test_util = { version = "0.8.0" }

tempfile = "3.8.0"
tokio = { version = "1.36.0", features = ["rt", "macros", "rt-multi-thread"] }

waterfalls = { version = "0.4.1", default-features = false, features = [
    "test_env",
] }
bitcoind = { version = "0.36" } # TODO: remove once we're able to broadcast through waterfalls

[features]
default = ["esplora", "electrum", "elements_rpc"]
serial = ["lwk_jade/serial"] # this is a dev-dep feature
esplora = ["reqwest/blocking", "age"]
electrum = ["electrum-client"]
esplora_wasm = [
    "reqwest",
    "wasm-bindgen-futures",
    "web-sys",
    "js-sys",
    "tokio",
    "age",
]
elements_rpc = ["bitcoincore-rpc"]
bindings = []
test_wallet = ["lwk_signer"]

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[example]]
name = "list_transactions"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
