[package]
name = "lwk_wollet"
version = "0.12.0"
edition = "2021"
autotests = false
description = "Liquid Wallet Kit - Watch-only wallet based on CT Descriptors"
license = "MIT OR BSD-2-Clause"
documentation = "https://docs.rs/lwk_wollet"

[lib]
crate-type = ["lib"]

[dependencies]
lwk_common = { version = "0.12.0" }
lwk_signer = { version = "0.12.0", features = [
    "jade",
    "ledger",
], optional = true }

rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm-siv = "0.11.0"
electrum-client = { version = "0.21.0", optional = true, default-features = false, features = [
    "use-rustls-ring",
    "proxy",
] }
bip39 = "2.0.0"
elements-miniscript = { version = "0.4", features = ["serde"] }
thiserror = "1.0.48"
once_cell = "1.18.0"
elements = { version = "0.25.0", features = ["base64"] }
# TODO: remove once we have elements-miniscript compatible with elements 0.26
elements26 = { package = "elements", version = "0.26.0", features = ["base64"] }
base64 = "0.21.4"
bitcoincore-rpc = { version = "0.19.0", optional = true }
futures = "0.3"

reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "blocking",
    "json",
    "rustls-tls",
] }

scrypt = { version = "0.11.0", optional = true }
pbkdf2 = { version = "0.12", optional = true }
sha2 = { version = "0.10", optional = true }
hmac = { version = "0.12", optional = true }
aes = { version = "0.8", optional = true }
cbc = { version = "0.1", optional = true, features = ["alloc"] }
aes-gcm = { version = "0.10", optional = true }
flate2 = { version = "1.1", optional = true }
rmpv = { version = "1.3", optional = true, features = ["with-serde"] }
rmp-serde = { version = "1.3", optional = true }

#registry
idna = "1"
regex-lite = "0.1.5"

log = "0.4.22"
fxhash = "0.2.1"

age = { version = "0.11.0", optional = true }
url = "2.5.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]

tokio-tungstenite = { version = "0.24.0", optional = true, features = [
    "rustls-tls-webpki-roots",
] }

tokio = { version = "1.36.0", default-features = false, features = [
    "time",
    "rt",
    "macros",
    "rt-multi-thread",
    "sync",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1.36.0", default-features = false, features = [
    "time",
    "rt",
    "macros",
] }
# wasm
wasm-bindgen-futures = { version = "0.4.41" }
web-sys = { version = "0.3.68", features = ["Window"] }
js-sys = { version = "0.3.68" }

[dev-dependencies]
lwk_jade = { version = "0.12.0", features = ["test_emulator"] }
lwk_ledger = { version = "0.12.0", features = ["test_emulator"] }
lwk_signer = { version = "0.12.0", features = ["jade", "ledger"] }
lwk_containers = { version = "0.10.0" }
lwk_test_util = { version = "0.12.0" }

tempfile = "3.8.0"

waterfalls = { version = "0.9.8", default-features = false, features = [
    "test_env",
] }
criterion = "0.5.1"

[features]
default = ["esplora", "electrum", "elements_rpc", "amp2", "amp0"]
serial = ["lwk_jade/serial"] # this is a dev-dep feature
esplora = ["reqwest", "age"]
electrum = ["electrum-client"]
elements_rpc = ["bitcoincore-rpc"]
bindings = []
test_wallet = ["lwk_signer"]
amp2 = ["reqwest"]
amp0 = [
    "tokio-tungstenite",
    "scrypt",
    "pbkdf2",
    "sha2",
    "hmac",
    "aes",
    "cbc",
    "aes-gcm",
    "flate2",
    "rmpv",
    "rmp-serde",
]

[[test]]
name = "e2e"
path = "tests/e2e.rs"

[[example]]
name = "list_transactions"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bench]]
name = "benches"
harness = false
