[package]
name = "pset_details"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elements-miniscript = { git = "https://github.com/ElementsProject/elements-miniscript.git", rev = "856543bbb0dbe14044c7a2d062ce1cf29ce70741" }
thiserror = "1.0.48"
