[package]
name = "test_util"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
electrsd = { version = "0.25.0", features = ["legacy"] }
elements = "0.24.0"
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lwk_common = { path = "../lwk_common" }
lwk_signer = { path = "../lwk_signer" }
wollet = { path = "../wollet" }
electrum-client = "0.15.0"
lwk_jade = { path = "../lwk_jade", features = ["serial"] }
rand = "0.8.5"
tempfile = "3.8.0"
