[package]
name = "tiny_jrpc"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
jsonrpc = "0.16.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.106"
thiserror = "1"
tiny_http = "0.12.0"
tracing = "0.1"

# FIXME: these dependencies are here to handle errors that originate in those crates,
#        ideally they should not be there, but this require to move the error handling
#        of those cases elsewhere.
wollet = { path = "../wollet" }
signer = { path = "../signer" }
jade = { path = "../jade", features = ["serial"] }

[dev-dependencies]
minreq = "2.9"
tempfile = "3.8.0"
